# mobileconfig-validator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/mobileconfig_validator/: __init__.py  __main__.py  api.py  cache.py  cli.py  formatter.py  loader.py  types.py  validator.py
tests/: conftest.py  test_cli.py  test_formatter.py  test_validator.py
tests/fixtures/invalid/: duplicate-uuid.mobileconfig  invalid-uuid-format.mobileconfig  missing-payload-uuid.mobileconfig  not-a-plist.mobileconfig  unknown-payload-type.mobileconfig  wrong-outer-type.mobileconfig  wrong-payload-version.mobileconfig
tests/fixtures/valid/: dock-basic.mobileconfig  multiple-payloads.mobileconfig  screensaver.mobileconfig
tests/fixtures/warning/: unknown-key.mobileconfig
