[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobileconfig-validator"
version = "1.0.0"
description = "Validate Apple Configuration Profiles (.mobileconfig) against ProfileManifests schemas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Talieisin", email = "it@talieisin.com" }
]
keywords = [
    "mobileconfig",
    "apple",
    "configuration-profile",
    "mdm",
    "intune",
    "validation",
    "profilemanifests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

# No dependencies - pure Python standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
mobileconfig-validator = "mobileconfig_validator.cli:main"
mcv = "mobileconfig_validator.cli:main"

[project.urls]
Homepage = "https://github.com/Talieisin/mobileconfig-validator"
Documentation = "https://github.com/Talieisin/mobileconfig-validator#readme"
Repository = "https://github.com/Talieisin/mobileconfig-validator.git"
Issues = "https://github.com/Talieisin/mobileconfig-validator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mobileconfig_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
strict = true
